--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "description": "A Strapi application.",
   "dependencies": {
     "async": "~1.5.2",
-    "lodash": "~4.6.1",
     "knex": "~0.10.0",
+    "lodash": "~4.6.1",
     "socket.io": "~1.4.5",
     "sqlite3": "~3.1.1",
     "strapi": "~2.0.0",
     "strapi-bookshelf": "~2.0.0",
-    "strapi-knex": "~2.0.0"
+    "strapi-knex": "~2.0.0",
+    "youtube-node": "^1.3.0"
   },
   "main": "./server.js",
   "scripts": {
