--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "request": "^2.70.0",
     "socket.io": "~1.4.5",
     "sqlite3": "~3.1.1",
-    "strapi": "~2.0.0",
+    "strapi": "~2.0.0"
   },
   "main": "./server.js",
   "scripts": {
