--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lodash": "~4.6.1",
     "request": "^2.70.0",
     "socket.io": "~1.4.5",
-    "sqlite3": "~3.1.1",
-    "strapi": "~2.0.0"
+    "sqlite3": "~3.1.1"
   },
   "main": "./server.js",
   "scripts": {
